syntax = "proto3";

import "Proto/Common/customTypes.proto";

option csharp_namespace = "POC.Grpc.Lib.Proto.Customers.MessagesResponse";

message CustomerResponse {
	int64 id = 1;
	string name = 2;
	int32 age = 3;
	bool active = 4;
	float cashBalanceFloat = 5;
	double cashBalanceDouble = 6;
	DecimalGrpc cashBalanceDecimal = 7;
}

message CustomerListResponse {
	repeated CustomerResponse customers = 1;
}