syntax = "proto3";

import "google/protobuf/empty.proto";
import "messagesRequest.proto";
import "messagesResponse.proto";

option csharp_namespace = "POC.Grpc.Lib.Proto.Services";

service CustomerService {
	rpc Get(GetByInt64IdRequest) returns (CustomerResponse);
	rpc List(google.protobuf.Empty) returns (CustomerListResponse);
}